gcc/testsuite/g++.dg/template/crash62.C
// PR c++/29728

template<int> void foo()
{
  int a[] = { X: 0 }; // { dg-error "designated initializer" }
}
